[package]
name = "level2-contract-abi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
eyre = "0.6"
ethers = { version = "2.0.14", features = ["rustls"] }
url = "2.5"
dotenv = "0.15"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }